fixed alignment

--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,5 @@
 #about-me-section {
-    height: 100%;
+    height: 38vh;
 
     flex-direction: column;
     align-items: flex-start;
@@ -31,6 +31,7 @@ h2 {
     font-size: 2.5em;
     cursor: default;
     user-select: none;
+    margin-top: 0;
 }
 
 #about-me-name {
